force-app/main/default/objects/Account/fields/Account_HBA__c.field-meta.xml
<CustomField>
    <fullName>Account_HBA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HBA</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (HBA)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>