force-app/main/default/objects/Account/fields/Account_Travel_Agency__c.field-meta.xml
<CustomField>
    <fullName>Account_Travel_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>