force-app/main/default/objects/Account/fields/Addition_to_address__c.field-meta.xml
<CustomField>
    <fullName>Addition_to_address__c</fullName>
    <label>Addition to address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>