force-app/main/default/objects/Account/fields/Booking_channel_declarative__c.field-meta.xml
<CustomField>
    <fullName>Booking_channel_declarative__c</fullName>
    <label>Booking channel (declarative)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Hotel</fullName>
            </value>
            <value>
                <fullName>Website B&amp;B</fullName>
            </value>
            <value>
                <fullName>Individual booking</fullName>
            </value>
            <value>
                <fullName>Group booking</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>Channel manager</fullName>
            </value>
            <value>
                <fullName>OTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>