force-app/main/default/objects/Account/fields/Booking_France__c.field-meta.xml
<CustomField>
    <fullName>Booking_France__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Booking France</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>