force-app/main/default/objects/Account/fields/Booking_FranceNB__c.field-meta.xml
<CustomField>
    <fullName>Booking_FranceNB__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booking France</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>