force-app/main/default/objects/Account/fields/Booking_GermanyNb__c.field-meta.xml
<CustomField>
    <fullName>Booking_GermanyNb__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booking Germany</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>