force-app/main/default/objects/Account/fields/Booking_OthersNb__c.field-meta.xml
<CustomField>
    <fullName>Booking_OthersNb__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booking Others</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>