force-app/main/default/objects/Account/fields/Booking_Poland__c.field-meta.xml
<CustomField>
    <fullName>Booking_Poland__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Booking Poland</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>