force-app/main/default/objects/Account/fields/Booking_PolandNb__c.field-meta.xml
<CustomField>
    <fullName>Booking_PolandNb__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booking Poland</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>