force-app/main/default/objects/Account/fields/Business_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Business_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Contributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Contributor</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>