force-app/main/default/objects/Account/fields/Compagny_type__c.field-meta.xml
<CustomField>
    <fullName>Compagny_type__c</fullName>
    <label>Company type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>Travel Agency</fullName>
            </value>
            <value>
                <fullName>Governmental institution</fullName>
            </value>
            <value>
                <fullName>Sport Association</fullName>
            </value>
            <value>
                <fullName>Other Association</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Coach Operator</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>M.I.C.E. Agencies</fullName>
            </value>
            <value>
                <fullName>TMC&apos;s</fullName>
            </value>
            <value>
                <fullName>Art association</fullName>
            </value>
            <value>
                <fullName>Religious association</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>