force-app/main/default/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Big &gt; 5000 employees</fullName>
            </value>
            <value>
                <fullName>Medium sized Company&lt;5000 employees</fullName>
            </value>
            <value>
                <fullName>Small Company &lt;250 employees</fullName>
            </value>
            <value>
                <fullName>Microbusiness &lt;10 employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>