force-app/main/default/objects/Account/fields/Consulting_Sourcing__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Sourcing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consulting / Sourcing</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Consulting / Sourcing)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>