force-app/main/default/objects/Account/fields/Data_History__c.field-meta.xml
<CustomField>
    <fullName>Data_History__c</fullName>
    <label>Data History</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>