force-app/main/default/objects/Account/fields/E_club_country_code__c.field-meta.xml
<CustomField>
    <fullName>E_club_country_code__c</fullName>
    <label>Subscription country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>