force-app/main/default/objects/Account/fields/E_Club_Status__c.field-meta.xml
<CustomField>
    <fullName>E_Club_Status__c</fullName>
    <label>BBH Club Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <label>Fermé</label>
            </value>
            <value>
                <fullName>Valid</fullName>
                <label>Actif</label>
            </value>
            <value>
                <fullName>Renewable</fullName>
            </value>
            <value>
                <fullName>Expired and renewable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>