force-app/main/default/objects/Account/fields/Eclub_change_request__c.field-meta.xml
<CustomField>
    <fullName>Eclub_change_request__c</fullName>
    <label>BBH Club change request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>