force-app/main/default/objects/Account/fields/First_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Booking_Date__c</fullName>
    <label>1st Booking Date</label>
    <type>Date</type>
</CustomField>