force-app/main/default/objects/Account/fields/fromHeroku__c.field-meta.xml
<CustomField>
    <fullName>fromHeroku__c</fullName>
    <defaultValue>false</defaultValue>
    <label>fromHeroku</label>
    <type>Checkbox</type>
</CustomField>