force-app/main/default/objects/Account/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <label>Subscription hotel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>