force-app/main/default/objects/Account/fields/Hotelid_club_subscription__c.field-meta.xml
<CustomField>
    <fullName>Hotelid_club_subscription__c</fullName>
    <label>Hotel subscription</label>
    <length>25</length>
    <type>Text</type>
</CustomField>