force-app/main/default/objects/Account/fields/Hotels_Count__c.field-meta.xml
<CustomField>
    <fullName>Hotels_Count__c</fullName>
    <label># Hotels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>