force-app/main/default/objects/Account/fields/Last_connection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_connection_Date__c</fullName>
    <label>Last connection Date</label>
    <type>Date</type>
</CustomField>