force-app/main/default/objects/Account/fields/Loge_Card__c.field-meta.xml
<CustomField>
    <fullName>Loge_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Account has a subscription loge card ?</inlineHelpText>
    <label>Loge Card</label>
    <type>Checkbox</type>
</CustomField>