force-app/main/default/objects/Account/fields/MarketingCountry__c.field-meta.xml
<CustomField>
    <fullName>MarketingCountry__c</fullName>
    <formula>IF(
AND(
Booking_FranceNB__c &gt; Booking_GermanyNb__c,
Booking_FranceNB__c &gt; Booking_ItalyNb__c,
Booking_FranceNB__c &gt; Booking_SpainNb__c,
Booking_FranceNB__c &gt; Booking_AustriaNB__c
),
&apos;BU France&apos;,
IF(
AND(
Booking_AustriaNB__c &gt; Booking_FranceNB__c,
Booking_AustriaNB__c &gt; Booking_ItalyNb__c,
Booking_AustriaNB__c &gt; Booking_SpainNb__c,
Booking_AustriaNB__c &gt; Booking_GermanyNb__c
),
&apos;BU Austria&apos;,
IF(
AND(
Booking_GermanyNb__c &gt; Booking_FranceNB__c,
Booking_GermanyNb__c &gt; Booking_ItalyNb__c,
Booking_GermanyNb__c &gt; Booking_SpainNb__c,
Booking_GermanyNb__c &gt; Booking_AustriaNB__c
),
&apos;BU Germany&apos;,
IF(
AND(
Booking_ItalyNb__c &gt; Booking_FranceNB__c,
Booking_ItalyNb__c &gt; Booking_GermanyNb__c,
Booking_ItalyNb__c &gt; Booking_SpainNb__c,
Booking_ItalyNb__c &gt; Booking_AustriaNB__c
),
&apos;BU Italy&apos;,
IF(
AND(
Booking_SpainNb__c &gt; Booking_FranceNB__c,
Booking_SpainNb__c &gt; Booking_GermanyNb__c,
Booking_SpainNb__c &gt; Booking_ItalyNb__c,
Booking_SpainNb__c &gt; Booking_AustriaNB__c
),
&apos;BU Spain&apos;,
/*case they are all equals or 0 */
IF(
E_club_country_code__c = &apos;FR&apos;,
&apos;BU France&apos;,
IF(
E_club_country_code__c = &apos;AT&apos;,
&apos;BU Austria&apos;,
IF(
E_club_country_code__c = &apos;DE&apos;,
&apos;BU Germany&apos;,
IF(
E_club_country_code__c = &apos;IT&apos;,
&apos;BU Italy&apos;,
IF(
E_club_country_code__c = &apos;ES&apos;,
&apos;BU Spain&apos;,
IF(
/*case they souscription country is not filled with the proper value */
ISPICKVAL(PersonMailingCountryCode,&apos;FR&apos;),
&apos;BU France&apos;,
IF(
ISPICKVAL(PersonMailingCountryCode,&apos;AT&apos;),
&apos;BU Austria&apos;,
IF(
ISPICKVAL(PersonMailingCountryCode,&apos;DE&apos;),
&apos;BU Germany&apos;,
IF(
ISPICKVAL(PersonMailingCountryCode,&apos;IT&apos;),
&apos;BU Italy&apos;,
IF(
ISPICKVAL(PersonMailingCountryCode,&apos;ES&apos;),
&apos;BU Spain&apos;,
IF(
/*case they address country is not filled with the proper value */
ISPICKVAL(Language__pc ,&apos;FR&apos;),
&apos;BU France&apos;,
IF(
ISPICKVAL(Language__pc ,&apos;AT&apos;),
&apos;BU Austria&apos;,
IF(
ISPICKVAL(Language__pc ,&apos;DE&apos;),
&apos;BU Germany&apos;,
IF(
ISPICKVAL(Language__pc ,&apos;IT&apos;),
&apos;BU Italy&apos;,
IF(
ISPICKVAL(Language__pc ,&apos;ES&apos;),
&apos;BU Spain&apos;,
&apos;BU France&apos;
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <label>MarketingCountry</label>
    <type>Text</type>
</CustomField>