force-app/main/default/objects/Account/fields/MarketingCountry_Sharing__c.field-meta.xml
<CustomField>
    <fullName>MarketingCountry_Sharing__c</fullName>
    <label>MarketingCountry Sharing</label>
    <length>200</length>
    <type>Text</type>
</CustomField>