force-app/main/default/objects/Account/fields/MaxBookingMinArrival__c.field-meta.xml
<CustomField>
    <fullName>MaxBookingMinArrival__c</fullName>
    <label>MaxBookingMinArrival</label>
    <type>Date</type>
</CustomField>