force-app/main/default/objects/Account/fields/National_Identification_number__c.field-meta.xml
<CustomField>
    <fullName>National_Identification_number__c</fullName>
    <label>National Identification number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>