force-app/main/default/objects/Account/fields/Number_of_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contracts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>