force-app/main/default/objects/Account/fields/Number_of_stay__c.field-meta.xml
<CustomField>
    <fullName>Number_of_stay__c</fullName>
    <label>Number of stay</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>