force-app/main/default/objects/Account/fields/Optin_Email_Temp_MC__c.field-meta.xml
<CustomField>
    <fullName>Optin_Email_Temp_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Email Temp MC</label>
    <type>Checkbox</type>
</CustomField>