force-app/main/default/objects/Account/fields/Optin_NL__c.field-meta.xml
<CustomField>
    <fullName>Optin_NL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Newsletter</label>
    <type>Checkbox</type>
</CustomField>