force-app/main/default/objects/Account/fields/Optin_SMS_Temp_MC__c.field-meta.xml
<CustomField>
    <fullName>Optin_SMS_Temp_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin SMS Temp MC</label>
    <type>Checkbox</type>
</CustomField>