force-app/main/default/objects/Account/fields/OptinEmail__c.field-meta.xml
<CustomField>
    <fullName>OptinEmail__c</fullName>
    <label>Optin_Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tp</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>