force-app/main/default/objects/Account/fields/OptinSms__c.field-meta.xml
<CustomField>
    <fullName>OptinSms__c</fullName>
    <label>Optin_Sms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tp</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>True,</fullName>
                <isActive>false</isActive>
                <label>True,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>