force-app/main/default/objects/Account/fields/Other_sector__c.field-meta.xml
<CustomField>
    <fullName>Other_sector__c</fullName>
    <label>Other sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>