force-app/main/default/objects/Account/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <externalId>true</externalId>
    <label>Partner Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>