force-app/main/default/objects/Account/fields/Point_Request__c.field-meta.xml
<CustomField>
    <fullName>Point_Request__c</fullName>
    <label>Point Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>