force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Serie</fullName>
            </value>
            <value>
                <fullName>FIT</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>