force-app/main/default/objects/Account/fields/SMS_technique_marketing__c.field-meta.xml
<CustomField>
    <fullName>SMS_technique_marketing__c</fullName>
    <formula>if(AND(Contains(PersonMobilePhone,&apos;+33&apos;),LEN(PersonMobilePhone) = 14),&apos;FR&apos;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS technique marketing</label>
    <type>Text</type>
</CustomField>