force-app/main/default/objects/Account/fields/Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Status_Text__c</fullName>
    <defaultValue>&apos;Prospect&apos;</defaultValue>
    <label>Status Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>