force-app/main/default/objects/Account/fields/Syncstatus__c.field-meta.xml
<CustomField>
    <fullName>Syncstatus__c</fullName>
    <label>Information change request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>