force-app/main/default/objects/Account/fields/Tech_BBUS__c.field-meta.xml
<CustomField>
    <fullName>Tech_BBUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_BBUS</label>
    <type>Checkbox</type>
</CustomField>