force-app/main/default/objects/Account/fields/Tech_Data__c.field-meta.xml
<CustomField>
    <fullName>Tech_Data__c</fullName>
    <description>This field stock the data for the webservices with BBUS</description>
    <label>Tech_Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>