force-app/main/default/objects/Account/fields/Tech_HotelCount__c.field-meta.xml
<CustomField>
    <fullName>Tech_HotelCount__c</fullName>
    <label>Tech_HotelCount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>