force-app/main/default/objects/Account/fields/Tech_points_results__c.field-meta.xml
<CustomField>
    <fullName>Tech_points_results__c</fullName>
    <label>Tech points results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>