force-app/main/default/objects/Account/fields/TechIsNotFirst_02__c.field-meta.xml
<CustomField>
    <fullName>TechIsNotFirst_02__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to flag accounts that are being processed in the batch Batch_FirstLastBooking</description>
    <label>TechIsNotFirst_02</label>
    <type>Checkbox</type>
</CustomField>