force-app/main/default/objects/Account/fields/TechIsNotFirst_03__c.field-meta.xml
<CustomField>
    <fullName>TechIsNotFirst_03__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to flag company accounts being processed in the batch Batch_PartnershipFieldsUpdate</description>
    <label>TechIsNotFirst_03</label>
    <type>Checkbox</type>
</CustomField>