force-app/main/default/objects/Account/fields/TechIsNotFirst__c.field-meta.xml
<CustomField>
    <fullName>TechIsNotFirst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_IsNotFirst</label>
    <type>Checkbox</type>
</CustomField>