force-app/main/default/objects/Account/fields/Technique_2__c.field-meta.xml
<CustomField>
    <fullName>Technique_2__c</fullName>
    <label>Technique 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>