force-app/main/default/objects/Account/fields/Technique_3__c.field-meta.xml
<CustomField>
    <fullName>Technique_3__c</fullName>
    <label>Technique 3</label>
    <length>25</length>
    <type>Text</type>
</CustomField>