force-app/main/default/objects/Account/fields/Technique_4__c.field-meta.xml
<CustomField>
    <fullName>Technique_4__c</fullName>
    <label>Technique 4</label>
    <length>25</length>
    <type>Text</type>
</CustomField>