force-app/main/default/objects/Account/fields/Total_Nights__c.field-meta.xml
<CustomField>
    <fullName>Total_Nights__c</fullName>
    <label>Total nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>