force-app/main/default/objects/Account/fields/Total_Nights_PartnerShip__c.field-meta.xml
<CustomField>
    <fullName>Total_Nights_PartnerShip__c</fullName>
    <label>Total Nights PartnerShip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>