force-app/main/default/objects/Account/fields/Total_Revenue_PartnerShip__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_PartnerShip__c</fullName>
    <label>Total Revenue PartnerShip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>