force-app/main/default/objects/Account/fields/Turnover_currency__c.field-meta.xml
<CustomField>
    <fullName>Turnover_currency__c</fullName>
    <label>Turnover currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>