force-app/main/default/objects/Account/fields/Turnover_of_the_company__c.field-meta.xml
<CustomField>
    <fullName>Turnover_of_the_company__c</fullName>
    <label>Turnover of the company</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>