force-app/main/default/objects/Account/fields/Turnover_of_the_company_Text__c.field-meta.xml
<CustomField>
    <fullName>Turnover_of_the_company_Text__c</fullName>
    <description>Text field to be shown on layouts, and used to calculate the number field &quot;Turnover_of_the_company__c&quot;</description>
    <label>Turnover of the Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>