force-app/main/default/objects/Account/recordTypes/DGA_Company.recordType-meta.xml
<RecordType>
    <fullName>DGA_Company</fullName>
    <active>false</active>
    <label>DGA Company</label>
</RecordType>