force-app/main/default/objects/Account/recordTypes/Partners.recordType-meta.xml
<RecordType>
    <fullName>Partners</fullName>
    <active>false</active>
    <label>Partners</label>
</RecordType>