force-app/main/default/objects/Account/validationRules/VR01_Account_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Account_Phone</fullName>
    <active>true</active>
    <description>This rule is created for Marketing Cloud</description>
    <errorConditionFormula>!$User.BypassValidationRule__c &amp;&amp; (Or(ISNULL(Phone),LEFT( BLANKVALUE(Phone,&quot;+&quot;), 1)&lt;&gt; &quot;+&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>The phone number must start with + (country code).</errorMessage>
</ValidationRule>