force-app/main/default/objects/Account/validationRules/VR02_Account_UKZipCode.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Account_UKZipCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.BypassValidationRule__c,
BillingCountry =&quot;United Kingdom&quot;,
NOT(
OR(
ISBlank(BillingPostalCode),
REGEX( BillingPostalCode  , &quot;[a-zA-Z]\\d\\s\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode  , &quot;[a-zA-Z]\\d\\d\\s\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode  , &quot;[a-zA-Z]{2}\\d\\s\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode  , &quot;[a-zA-Z]{2}\\d\\d\\s\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode  , &quot;[a-zA-Z]{2}\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode  , &quot;[a-zA-Z]\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;),
REGEX(BillingPostalCode  , &quot;[a-zA-Z]{2}\\d\\d\\s\\d[a-zA-Z]{2}&quot;)
)
)
)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>United Kingdom ZIP code must be in one the following formats: AA9A 9AA,  A9A 9AA,  A9 9AA,  A99 9AA,  AA9 9AA,  AA99 9AA.</errorMessage>
</ValidationRule>