force-app/main/default/objects/Account/validationRules/VR03_Account_SpFrGermItaZipCode.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_Account_SpFrGermItaZipCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.BypassValidationRule__c, 
OR(BillingCountry = &quot;France&quot;, BillingCountry = &quot;Germany&quot;,BillingCountry =&quot;Italy&quot;,BillingCountry = &quot;Spain&quot;),
NOT(REGEX( BillingPostalCode , &quot;(\\d{5})?&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>France, German, Italian and spanish ZIP code must be in 99999 format</errorMessage>
</ValidationRule>